charon/tests/ui/simple/dyn-fn.out

thread 'rustc' panicked at src/bin/charon-driver/translate/translate_trait_objects.rs:941:17:
internal error: entered unreachable code
note: run with `RUST_BACKTRACE=1` environment variable to display a backtrace
error: Thread panicked when extracting item `test_crate::gives_fn::{closure#0}`.
 --> tests/ui/simple/dyn-fn.rs:8:15
  |
8 |     takes_fn(&|counter| {
  |               ^^^^^^^^^

ERROR Charon failed to translate this code (1 errors)
